--- a/index.html
+++ b/index.html
@@ -1,9 +1,46 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Video Background Animated Responsive</title>
-    <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="" class="logo">Logo</a>
+      <div class="rightSide">
+        <div class="btns dayNight">
+          <ion-icon name="moon-outline"></ion-icon>
+          <ion-icon name="sunny-outline"></ion-icon>
+        </div>
+        <div class="btns menuToggle">
+          <ion-icon name="menu-outline"></ion-icon>
+          <ion-icon name="close-outline"></ion-icon>
+        </div>
+      </div>
+    </header>
+    <section class="main">
+      <video
+        src="https://cdn.jsdelivr.net/gh/joaquincbarrera/video-background-animated-responsive@master/video.mp4"
+        autoplay
+        loop
+        muted
+        type="mp4"
+      ></video>
+      <img
+        src="https://cdn.jsdelivr.net/gh/joaquincbarrera/video-background-animated-responsive@master/mask.jpg"
+        alt=""
+        class="mask"
+      />
+    </section>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+    <script src="script.js"></script>
+  </body>
 </html>
