--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
       />
       <h2>Ocean</h2>
     </section>
+
+    <ul class="navigation">
+      <li><a href="">Home</a></li>
+      <li><a href="">About</a></li>
+      <li><a href="">Package</a></li>
+      <li><a href="">Contact</a></li>
+    </ul>
+
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
