--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
         class="mask"
       />
       <h2>Ocean</h2>
+      <p class="copyrightText">@ Your Company - 2021</p>
+      <ul class="sci">
+        <li>
+          <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+        </li>
+        <li>
+          <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+        </li>
+        <li>
+          <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+        </li>
+      </ul>
     </section>
 
     <ul class="navigation">
